--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
       <dependency>
           <groupId>jstl</groupId>
           <artifactId>jstl</artifactId>
-          <version>1.2</version>
+          <version>LATEST</version>
       </dependency>
       <dependency>
           <groupId>org.hibernate</groupId>
@@ -138,6 +138,12 @@
           <groupId>org.projectlombok</groupId>
           <artifactId>lombok</artifactId>
           <version>1.18.6</version>
+          <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>javax.servlet.jsp</groupId>
+          <artifactId>javax.servlet.jsp-api</artifactId>
+          <version>2.3.3</version>
           <scope>provided</scope>
       </dependency>
 
