--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
           <version>2.3.3</version>
           <scope>provided</scope>
       </dependency>
+      <dependency>
+          <groupId>org.antlr</groupId>
+          <artifactId>antlr4-runtime</artifactId>
+          <version>4.7.2</version>
+      </dependency>
 
   </dependencies>
 
