--- a/pom.xml
+++ b/pom.xml
@@ -39,16 +39,7 @@
           <version>8.0.15</version>
       </dependency>
 
-      <dependency>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
-          <version>3.0.1</version>
-      </dependency>
-      <dependency>
-          <groupId>jstl</groupId>
-          <artifactId>jstl</artifactId>
-          <version>LATEST</version>
-      </dependency>
+
       <dependency>
           <groupId>org.hibernate</groupId>
           <artifactId>hibernate-core</artifactId>
@@ -152,8 +143,23 @@
           <artifactId>antlr4-runtime</artifactId>
           <version>4.7.2</version>
       </dependency>
-
-
+      <!-- https://mvnrepository.com/artifact/javax.servlet.jsp.jstl/jstl -->
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>jstl</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+      <!-- https://mvnrepository.com/artifact/org.apache.taglibs/taglibs-standard-impl -->
+      <dependency>
+          <groupId>org.apache.taglibs</groupId>
+          <artifactId>taglibs-standard-impl</artifactId>
+          <version>1.2.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.json</groupId>
+          <artifactId>json</artifactId>
+          <version>20180813</version>
+      </dependency>
   </dependencies>
 
   <build>
